style(landing): added emojis, to boost up the page

--- a/app/locales/en-US.json
+++ b/app/locales/en-US.json
@@ -57,7 +57,7 @@
             "text2": "By accepting the privacy terms, you consent to the system providing advice based on the information you provide."
         },
         "response": {
-            "title": "Dr. Sanovise Mi's Response:",
+            "title": "Dr. Sanovise's Response:",
             "thinking": "Thinking 🤔"
         },
         "settingsModal": {
