--- a/app/locales/hu-HU.json
+++ b/app/locales/hu-HU.json
@@ -57,7 +57,7 @@
             "text2": "Az adatvédelmi feltételek elfogadásával hozzájárul ahhoz, hogy rendszerünk az Ön által megadott információk alapján tanácsokat adjon."
         },
         "response": {
-            "title": "Dr. Sanovise Mi válasza:",
+            "title": "Dr. Sanovise válasza:",
             "thinking": "Gondolkodom 🤔"
         },
         "settingsModal": {
