style: added new styles to landing and app; on app fixed the autoscroll bug, and if you click on the logo, the page will be refreshed

--- a/app/locales/en-US.json
+++ b/app/locales/en-US.json
@@ -58,6 +58,7 @@
         },
         "response": {
             "title": "Dr. Sanovise's Response:",
+            "analyzing": "Analyzing 📚🧠",
             "thinking": "Thinking 🤔"
         },
         "settingsModal": {
