--- a/app/locales/hu-HU.json
+++ b/app/locales/hu-HU.json
@@ -58,6 +58,7 @@
         },
         "response": {
             "title": "Dr. Sanovise válasza:",
+            "analyzing": "Elemzem az adatokat 📚🧠",
             "thinking": "Gondolkodom 🤔"
         },
         "settingsModal": {
