--- a/landing/locales/en-US.json
+++ b/landing/locales/en-US.json
@@ -13,7 +13,7 @@
             ],
             "howItWorks": "🛠️ How It Works?",
             "howItWorksSteps": [
-                "Visit the {link} page.",
+                "Visit the <a href='https://app.sanovise.ranzak.site' target='_blank'>Sanovise Myself</a> page.",
                 "Enter your health data, such as heart rate, blood pressure, height, weight, etc.",
                 "The application analyzes the data using artificial intelligence.",
                 "Receive feedback on your health status and learn about potential health risks."
