--- a/landing/locales/en-US.json
+++ b/landing/locales/en-US.json
@@ -95,11 +95,81 @@
                     "Available on web, desktop, and mobile devices."
                 ]
             }
+        },
+        "terms": {
+            "title": "Terms of Use",
+            "lastUpdated": "Last updated: {date}",
+            "acceptanceText": [
+                "By using the service, you agree to these Terms of Use.",
+                "If you have any questions about the terms, please contact us."
+            ],
+            "sections": [
+                {
+                    "title": "1. Acceptance of Terms",
+                    "content": [
+                        "Welcome to the Sanovise website. By accessing the website, you agree to be bound by these Terms of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws.",
+                        "If you do not agree with any of these terms, you are prohibited from using or accessing this site."
+                    ]
+                },
+                {
+                    "title": "2. License to Use",
+                    "content": [
+                        "Permission is granted to temporarily download one copy of the materials on the Sanovise website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:",
+                        "- modify or copy the materials",
+                        "- use the materials for any commercial purpose",
+                        "- attempt to decompile or reverse engineer any software contained on the website",
+                        "- remove any copyright or other proprietary notations",
+                        "- transfer the materials to another person or 'mirror' the materials on any other server",
+                        "This license shall automatically terminate if you violate any of these restrictions and may be terminated by Sanovise at any time."
+                    ]
+                },
+                {
+                    "title": "3. Disclaimer",
+                    "content": [
+                        "The materials on the Sanovise website are provided 'as is'. Sanovise makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.",
+                        "Further, Sanovise does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials or on any sites linked to this site."
+                    ]
+                },
+                {
+                    "title": "4. Limitations",
+                    "content": [
+                        "In no event shall Sanovise or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on the website, even if Sanovise or an authorized representative has been notified orally or in writing of the possibility of such damage.",
+                        "Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you."
+                    ]
+                },
+                {
+                    "title": "5. Accuracy of Materials",
+                    "content": [
+                        "The materials appearing on the Sanovise website could include technical, typographical, or photographic errors. Sanovise does not warrant that any of the materials on its website are accurate, complete, or current.",
+                        "Sanovise may make changes to the materials contained on its website at any time without notice. However, Sanovise does not make any commitment to update the materials."
+                    ]
+                },
+                {
+                    "title": "6. Links",
+                    "content": [
+                        "Sanovise has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Sanovise.",
+                        "Use of any such linked website is at the user's own risk."
+                    ]
+                },
+                {
+                    "title": "7. Modifications",
+                    "content": [
+                        "Sanovise may revise these Terms of Use for its website at any time without notice.",
+                        "By using this website, you agree to be bound by the then current version of these Terms of Use."
+                    ]
+                },
+                {
+                    "title": "8. Governing Law",
+                    "content": [
+                        "These terms and conditions are governed by and construed in accordance with the applicable law, and you irrevocably submit to the exclusive jurisdiction of the courts in that location."
+                    ]
+                }
+            ]
         }
     },
     "components": {
         "footer": {
-            "tos": "Terms of Service",
+            "terms": "Terms of Service",
             "copyright": "© 2025 Sanovise - All rights reserved."
         },
         "header": {
