--- a/app/locales/hu-HU.json
+++ b/app/locales/hu-HU.json
@@ -5,6 +5,9 @@
         }
     },
     "components": {
+        "chatInterface": {
+            "placeholder": "Írja be üzenetét..."
+        },
         "fileUpload": {
             "upload": "Válasszon fájlt vagy húzza ide",
             "loaded": "Betöltve"
