fix(app): fixed the file uploading for chat and user data

--- a/app/locales/en-US.json
+++ b/app/locales/en-US.json
@@ -10,8 +10,7 @@
         },
         "fileUpload": {
             "upload": "Select a file or drag it here",
-            "userData": "User Data",
-            "chatData": "Chat Data"
+            "lastLoaded": "Last loaded"
         },
         "header": {
             "settings": "Settings"
