--- a/app/locales/hu-HU.json
+++ b/app/locales/hu-HU.json
@@ -85,7 +85,25 @@
             "privacyLink": "adatvédelmi irányelveket",
             "submitData": "Adatok beküldése",
             "abort": "Ne válaszolj",
-            "exportData": "Exportálás"
+            "exportData": "Adatok exportálása",
+            "invalidHeight": "A magasság 50 cm és 300 cm között kell legyen.",
+            "invalidWeight": "A súly 1 kg és 500 kg között kell legyen.",
+            "invalidWaterIntake": "A napi vízfogyasztás 0 és 50 liter között kell legyen.",
+            "invalidHeartRate": "A pulzus 30 és 250 között kell legyen.",
+            "invalidSleep": "Az alvásidő 0 és 24 óra között kell legyen.",
+            "invalidBloodPressure": "A vérnyomásnak a következő formátumban kell lennie: systole/diastole (pl.: 120/80)."
         }
+    },
+    "global": {
+        "successSave": "Sikeresen elmentve",
+        "errorSave": "Hiba történt a mentés során.",
+        "errorSend": "Hiba történt az adatok küldése közben",
+        "tryAgain": "Kérlek, próbáld meg újra később, vagy frissítsd az oldalt.",
+        "emptyResponse": "A szerver nem küldött választ. Lehet, hogy valami megszakadt.",
+        "networkError": "Hálózati hiba – ellenőrizd az internetkapcsolatod!",
+        "unknownError": "Ismeretlen hiba történt. 😔",
+        "errorLoad": "A fájl nem tartalmaz érvényes adatokat!",
+        "invalidJson": "Hibás fájlformátum! Kérlek, ellenőrizd, hogy valóban JSON-t töltöttél-e fel.",
+        "anotherFile": "Kérlek, próbáld meg újra vagy válassz másik fájlt."
     }
 }
